# claude-ai-microservices

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
.claude/: settings.local.json
.claude/agents/: code-reviewer.md  devops-engineer.md  microservices-architect.md  security-engineer.md  test-automator.md
.claude/rules/: CODE_RULES.md
.claude/skills/: README.md
api_gateway/: CLAUDE.md  Dockerfile  nginx.conf
backend/: CHANGELOG.md  CLAUDE.md
backend/tasks/: decisions.md
engine/: .env.example  CHANGELOG.md  CLAUDE.md  Dockerfile  pyproject.toml
engine/.claude/agents/: fastapi-engineer.md
engine/.claude/rules/: BACKEND_RULES.md
engine/.claude/skills/changelog-management/: SKILL.md
engine/.claude/skills/changelog-management/references/: conventional-commits.md
engine/.claude/skills/fastapi-patterns/: SKILL.md
engine/app/: config.py  database.py  dependencies.py  exceptions.py  logging.py  main.py
engine/app/api/v1/: __init__.py  auth.py  permissions.py  roles.py  users.py
engine/app/models/: __init__.py  associations.py  permission.py  role.py  user.py
engine/app/repositories/: __init__.py  permission_repository.py  role_repository.py  user_repository.py
engine/app/schemas/: __init__.py  permission.py  role.py  user.py
engine/app/services/: __init__.py  acl_service.py  auth_service.py  user_service.py
engine/app/utils/: security.py
engine/tasks/: decisions.md  lessons.md
frontend/: CLAUDE.md  Dockerfile  index.html  package.json
(+16 files in other folders)
